# news-summarizer

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: daily_summary.yml
app/conf/: config.yaml
app/prompts/: tech.md
app/src/: config_loader.py  main.py  models.py  summarizer.py
app/src/collectors/: __init__.py  base.py  email_collector.py
app/src/processors/: ai_processor.py  base.py
app/src/senders/: base.py  email_sender.py
app/src/utils/: html_cleaner.py  logger.py  markdown_converter.py
assets/docs/: README_zh.md
conf/: config.example.yaml  config.yaml
prompts/: tech.md
src/: config_loader.py  main.py  models.py  summarizer.py
src/collectors/: base.py  email_collector.py
src/processors/: __init__.py  ai_processor.py  base.py
src/senders/: __init__.py  base.py  email_sender.py
src/utils/: html_cleaner.py  logger.py
