[project]
name = "news-summarizer"
version = "0.1.0"
description = "Collecting various industry news from designated information sources by AI, summarizes key points and sends them to you."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "html2text>=2020.1.16",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
